@@ -10,6 +10,7 @@
   * Remove Object#instance_extended_* methods
   * Add Object#call
   * Object#call accepts a variable number of arguments and merges them with the last array of arguments
+  * Remove Callback class - unnecessary
 
 2009-03-11 - Sean Huber (shuber@huberry.com)
   * Rename to phby
